--- a/.gitignore
+++ b/.gitignore
@@ -8,14 +8,14 @@
 Icon
 .Spotlight-V100
 .Trashes
-._*
+# ._*
 
 
 ############################
 # Linux
 ############################
 
-*~
+# *~
 
 
 ############################
@@ -65,7 +65,7 @@ $RECYCLE.BIN/
 # Logs and databases
 ############################
 
-.tmp
+# .tmp
 *.log
 *.sql
 *.sqlite
@@ -106,7 +106,7 @@ coverage
 # Strapi
 ############################
 
-.env
+
 license.txt
 exports
 *.cache
