--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HOST=0.0.0.0
+HOST=https://koachassist.onrender.com/
 PORT=1337
 APP_KEYS=Ed7NRg7L6W9TZsvc0CDidQ==,ogyjeJxXpjRiCMaJgT0pIQ==,LZC9429JXwJf3Dz5/6y8Bw==,aoOvqPgG7kuAtxayEzbvlg==
 API_TOKEN_SALT=kup1MBBTaCdcrD5u+a8PAw==
