--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@strapi/strapi": "4.4.7",
     "@strapi/plugin-users-permissions": "4.4.7",
     "@strapi/plugin-i18n": "4.4.7",
-    "better-sqlite3": "7.4.6"
+    "better-sqlite3": "7.4.6",
+    "@strapi/provider-upload-cloudinary": "4.1.7",
+    "pg": "^8.7.0",
+    "pg-connection-string": "^2.5.0",
+    "sqlite3": "latest"
   },
   "author": {
     "name": "A Strapi developer"
