--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ APP_KEYS=Ed7NRg7L6W9TZsvc0CDidQ==,ogyjeJxXpjRiCMaJgT0pIQ==,LZC9429JXwJf3Dz5/6y8B
 API_TOKEN_SALT=kup1MBBTaCdcrD5u+a8PAw==
 ADMIN_JWT_SECRET=VK03oaTdC3Kltg5bL3JJdA==
 JWT_SECRET=j1Hs3xvdg30K8yjo84E5OA==
+SENDGRID_API_KEY=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
