Added Cloudinary Image Hosting

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ API_TOKEN_SALT=kup1MBBTaCdcrD5u+a8PAw==
 ADMIN_JWT_SECRET=VK03oaTdC3Kltg5bL3JJdA==
 JWT_SECRET=j1Hs3xvdg30K8yjo84E5OA==
 SENDGRID_API_KEY=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
+CLOUDINARY_NAME=dumarff2w
+CLOUDINARY_KEY=895898391791465
+CLOUDINARY_SECRET=_znVZPbVKu8as8rpqd7cqShCwtE
