--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@strapi/plugin-i18n": "4.4.7",
     "@strapi/plugin-users-permissions": "4.4.7",
     "@strapi/provider-email-sendgrid": "^4.6.0",
-    "@strapi/provider-upload-cloudinary": "4.1.7",
+    "@strapi/provider-upload-cloudinary": "^4.6.1",
     "@strapi/strapi": "4.4.7",
     "better-sqlite3": "7.4.6",
     "pg": "^8.7.0",
