--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "better-sqlite3": "7.4.6",
     "pg": "^8.7.0",
     "pg-connection-string": "^2.5.0",
-    "sqlite3": "latest",
-    "strapi-plugin-import-export-entries": "^1.18.0"
+    "sqlite3": "latest"
   },
   "author": {
     "name": "A Strapi developer"
