--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/provider-upload-cloudinary": "^4.6.1",
     "@strapi/strapi": "4.4.7",
     "better-sqlite3": "7.4.6",
+    "koa-session2": "^2.2.10",
     "pg": "^8.7.0",
     "pg-connection-string": "^2.5.0",
     "sqlite3": "latest"
