made the email service to work

--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ SENDGRID_API_KEY=SG.iLw1X8xoTTOsf4h2DIc2CQ.srHd_O3saeXsZToXH4HvI4xF8SXgiohMoSyCM
 CLOUDINARY_NAME=dumarff2w
 CLOUDINARY_KEY=895898391791465
 CLOUDINARY_SECRET=_znVZPbVKu8as8rpqd7cqShCwtE
+app_password=
+
+SMTP_USERNAME=koachproject@gmail.com
+SMTP_PASSWORD=voyl bchu dcmb ginq
