--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.4.7",
     "@strapi/plugin-users-permissions": "4.4.7",
+    "@strapi/provider-email-nodemailer": "^4.15.4",
     "@strapi/provider-email-sendgrid": "^4.14.4",
     "@strapi/provider-upload-cloudinary": "^4.6.1",
     "@strapi/strapi": "4.4.7",
