fixed new email settings

--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ CLOUDINARY_KEY=895898391791465
 CLOUDINARY_SECRET=_znVZPbVKu8as8rpqd7cqShCwtE
 app_password=
 
-SMTP_USERNAME=koachproject@gmail.com
-SMTP_PASSWORD=voyl bchu dcmb ginq
+SMTP_USERNAME=koachnew@gmail.com
+SMTP_PASSWORD=dmfh djcz styq rary
